--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get: ^4.6.6
+  logging: ^1.2.0
   shared_preferences: ^2.2.3
   google_fonts: ^6.2.1
   dynamic_color: ^1.7.0
